# Ray-Tracer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  camera.h  color.h  compile_commands.json  hittable.h  hittable_list.h  image.h  main.cpp  material.h  ray.h  renderer.h  rthelper.h  scene.h  sphere.h  vec3.h
github_docs/: 512.ppm
